--- a/jenkinsfile
+++ b/jenkinsfile
@@ -465,7 +465,7 @@ pipeline {
                                 def totalModules = 20 
                                 def progress = (completedModules / totalModules) * 100
                                 echo "Kubernetes modules: ${progressBar(progress as int)}"
-                                if (progress != '0'){
+                                if (0 != progress){
                                     echo "You're on your way to mastering Kubernetes! Keep learning—it’s a valuable skill."
                                 } else {
                                     echo "It's not too late to start! Motivation is the key."
@@ -486,7 +486,7 @@ pipeline {
                                 def totalLessons = 16
                                 def progress = (completedLessons / totalLessons) * 100
                                 echo "Investment lessons: ${progressBar(progress as int)}"
-                                if (progress != '0'){
+                                if (0 != progress){
                                     echo "You're making progress on learning to invest! Keep going—it’s an important skill for your future."
                                 } else {
                                     echo "It's not too late to start! Motivation is the key."
